--- a/resources/view/unauth/register.html
+++ b/resources/view/unauth/register.html
@@ -5,7 +5,7 @@
     <appMain>
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col-12 col-md-8 col-xl-5">
-                <div class="card shadow-2-strong" style="border-radius: 1rem;">
+                <div class="card shadow-2-strong" style="border-radius: 1rem;">F
                     <div class="card-body p-3 p-md-5 text-center">
                         <h3 class="mb-3">Registration</h3>
                         <form action="/ui/register" method="post" th:object="${userTo}">
@@ -76,14 +76,6 @@
                         <a class="btn btn-secondary btn-lg me-2" href="/oauth2/authorization/google"
                            type="button">
                             <i class="fa-brands fa-google"></i>
-                        </a>
-                        <a class="btn btn-primary btn-lg me-2" href="/oauth2/authorization/vk" style="padding-left: 17px; padding-right: 17px;"
-                           type="button">
-                            <i class="fa-brands fa-vk"></i>
-                        </a>
-                        <a class="btn btn-danger btn-lg me-2" href="/oauth2/authorization/yandex" style="padding-left: 21px; padding-right: 21px;"
-                           type="button">
-                            <i class="fa-brands fa-yandex"></i>
                         </a>
                         <a class="btn btn-dark btn-lg me-2" href="/oauth2/authorization/github" type="button">
                             <i class="fa-brands fa-github"></i>
