--- a/resources/view/layout/header.html
+++ b/resources/view/layout/header.html
@@ -9,7 +9,7 @@
                 <div class="collapse navbar-collapse mt-2 mb-2 px-5">
                     <ul class="navbar-nav m-auto">
                         <form class="d-flex" role="search">
-                            <input aria-label="Search" class="form-control" id="header-search" placeholder="Search"
+                            <input aria-label="Search" class="form-control" id="header-search" th:placeholder="#{header.search}"
                                    type="search">
                         </form>
                         <li class="nav-item menu-item me-3 ms-4">
@@ -17,14 +17,13 @@
                         </li>
                     </ul>
                     <div th:if="${authUser} == null">
-                        <a class="btn btn-orange" href="/view/login" type="button">Login/Register</a>
+                        <a class="btn btn-orange" href="/view/login" type="button" th:text="#{header.login}"></a>
                     </div>
                     <th:block th:if="${authUser} != null">
                         <a class="btn btn-orange" href="/ui/profile" type="button"><i
                                 class="fa-solid fa-address-card"></i> Profile</a>
                         <form action="/ui/logout" class="mx-2" method="post">
-                            <button class="btn btn-yellow btn-orange" type="submit"><i class="fa-solid fa-sign-out"></i>
-                                Logout
+                            <button class="btn btn-yellow btn-orange" type="submit" th:text="#{header.logout}"><i class="fa-solid fa-sign-out"> </i>
                             </button>
                         </form>
                     </th:block>
